--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-camera",
-  "version": "4.0.4-dev",
-  "description": "Cordova Camera Plugin",
+  "name": "cordova-plugin-camera-asb",
+  "version": "4.0.4-asb",
+  "description": "ASB Internal fork - Cordova Camera Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-camera",
+    "id": "cordova-plugin-camera-asb",
     "platforms": [
       "android",
       "ios",
@@ -15,10 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-camera"
-  },
-  "bugs": {
-    "url": "https://issues.apache.org/jira/browse/CB"
+    "url": "https://github.com/ASBConsulting/cordova-plugin-camera"
   },
   "keywords": [
     "cordova",
