--- a/plugin.xml
+++ b/plugin.xml
@@ -21,14 +21,13 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
-    id="cordova-plugin-camera"
+    id="cordova-plugin-camera-asb"
     version="4.0.4-dev">
     <name>Camera</name>
     <description>Cordova Camera Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,camera</keywords>
-    <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-camera.git</repo>
-    <issue>https://issues.apache.org/jira/browse/CB/component/12320645</issue>
+    <repo>https://github.com/ASBConsulting/cordova-plugin-camera.git</repo>
 
     <engines>
         <engine name="cordova-android" version=">=6.3.0" />
